--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
-    "next": "13.4.9",
+    "next": "^16.0.7",
     "platform": "^1.3.6",
     "postcss": "8.4.25",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^19.2.1",
+    "react-dom": "19.2.1",
     "react-json-view": "^1.21.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
